<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MovieDetails">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:gravity="center"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <Switch
                android:id="@+id/switch_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/detail_favorite"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/testposter"/>

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbars="vertical">

                <TextView
                    android:id="@+id/tv_over_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:textSize="15sp"
                    android:textStyle="italic" />

            </ScrollView>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/detail_user_rating"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/detail_release_date"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/detail_trailers"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textSize="15sp"/>

<!--ListView for the trailers
it is include TextView to show error message if the connection failed
and ProgressBar to indicate loading
-->
        <Spinner
            android:id="@+id/spinner_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_error_message_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_error_message"
            android:textSize="20sp"
            android:fontFamily="monospace"
            android:textStyle="italic"
            android:visibility="invisible"/>

        <ProgressBar
            android:id="@+id/pb_loading_indicator_trailers"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:visibility="invisible"/>
<!--_____________________________________________-->

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/detail_reviews"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <!--ListView for the reviews
        it is include TextView to show error message if the connection failed
        and ProgressBar to indicate loading
        -->
        <Spinner
            android:id="@+id/spinner_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_error_message_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_error_message"
            android:textSize="20sp"
            android:fontFamily="monospace"
            android:textStyle="italic"
            android:visibility="invisible"/>

        <ProgressBar
            android:id="@+id/pb_loading_indicator_reviews"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:visibility="invisible"/>
        <!--_____________________________________________-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:onClick="onClickRecommendations"
                android:id="@+id/tv_recommendations"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/detail_recommendations"
                android:textSize="15sp" />

            <Button
                android:onClick="onClickSimilar"
                android:id="@+id/tv_similar"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/detail_similar"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>